// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MarkedSentence /> should match baseline snapshot 1`] = `
.c1 {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

.c3 {
  color: inherit;
  background-color: rgba(48,192,249,0.8);
  padding: 1px 2px 2px;
  border-radius: 2px;
}

.c0 {
  padding: 0.225rem;
  font-size: 15.3px;
  padding: 0.225rem;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.3;
  margin-left: 0;
  margin-right: 0;
  line-height: 1;
  color: #616161;
  font-size: 17.7px;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
}

.c0:not(:only-child) {
  margin-bottom: 0.225rem;
}

.c2 {
  background-color: rgba(0,0,0,0);
  color: rgba(133,35,231,0.8);
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc(15.3px + (17.4 - 15.3) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc(17.7px + (24.9 - 17.7) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 24.9px;
  }
}

@media (min-width:600px) {
  .c0:not(:only-child) {
    margin-bottom: 0.33325rem;
  }
}

<p
  class="c0"
  lang="ja"
>
  <a
    class="c1"
    href="http://jisho.org/search/その言葉の漢字は難しい"
    rel="external noopener noreferrer"
    target="_blank"
    title="Deconstruct sentence at Jisho.org"
  >
    <span />
    <mark
      class="c2 c3"
      color="inherit"
    />
    <span>
      その言葉の漢字は難しい
    </span>
  </a>
</p>
`;

exports[`<MarkedSentence /> should match character snapshot 1`] = `
.c1 {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

.c3 {
  color: inherit;
  background-color: rgba(48,192,249,0.8);
  padding: 1px 2px 2px;
  border-radius: 2px;
}

.c0 {
  padding: 0.225rem;
  font-size: 15.3px;
  padding: 0.225rem;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.3;
  margin-left: 0;
  margin-right: 0;
  line-height: 1;
  color: #616161;
  font-size: 17.7px;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
}

.c0:not(:only-child) {
  margin-bottom: 0.225rem;
}

.c2 {
  background-color: rgba(0,0,0,0);
  color: rgba(133,35,231,0.8);
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc(15.3px + (17.4 - 15.3) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc(17.7px + (24.9 - 17.7) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 24.9px;
  }
}

@media (min-width:600px) {
  .c0:not(:only-child) {
    margin-bottom: 0.33325rem;
  }
}

<p
  class="c0"
  lang="ja"
>
  <a
    class="c1"
    href="http://jisho.org/search/その言葉の漢字は難しい"
    rel="external noopener noreferrer"
    target="_blank"
    title="Deconstruct sentence at Jisho.org"
  >
    <span>
      その言葉の
    </span>
    <mark
      class="c2 c3"
      color="inherit"
    >
      漢字
    </mark>
    <span>
      は難しい
    </span>
  </a>
</p>
`;

exports[`<MarkedSentence /> should match kana snapshot 1`] = `
.c1 {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

.c3 {
  color: inherit;
  background-color: rgba(48,192,249,0.8);
  padding: 1px 2px 2px;
  border-radius: 2px;
}

.c0 {
  padding: 0.225rem;
  font-size: 15.3px;
  padding: 0.225rem;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.3;
  margin-left: 0;
  margin-right: 0;
  line-height: 1;
  color: #616161;
  font-size: 17.7px;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
}

.c0:not(:only-child) {
  margin-bottom: 0.225rem;
}

.c2 {
  background-color: rgba(0,0,0,0);
  color: rgba(133,35,231,0.8);
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc(15.3px + (17.4 - 15.3) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc(17.7px + (24.9 - 17.7) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 24.9px;
  }
}

@media (min-width:600px) {
  .c0:not(:only-child) {
    margin-bottom: 0.33325rem;
  }
}

<p
  class="c0"
  lang="ja"
>
  <a
    class="c1"
    href="http://jisho.org/search/その言葉の漢字は難しい"
    rel="external noopener noreferrer"
    target="_blank"
    title="Deconstruct sentence at Jisho.org"
  >
    <span />
    <mark
      class="c2 c3"
      color="inherit"
    >
      その
    </mark>
    <span>
      言葉の漢字は難しい
    </span>
  </a>
</p>
`;
